# 2DEngine

./: .gitignore  CMakeLists.txt  README.md  Shortcuts.txt
.cache/clangd/index/: AnimationComponent.h.9E41B832AE662A04.idx  AnimationSystem.h.22E3BEA77F3302BC.idx  AssetManager.cpp.8607E1C31CA2AFC6.idx  AssetManager.h.9FE12CFF57413D0D.idx  BoxColliderComponent.h.90ADCC3C249E2FD3.idx  CollisionEvent.h.90ED99C110F2FC11.idx  CollisionSystem.h.54F29B5FE6588CEF.idx  DamageSystem.h.FB26A09AACBF93B2.idx  ECS.cpp.727658E0C3C41FD7.idx  ECS.h.3AF4CF2BAEB27514.idx  Event.h.9748A0FE12C04727.idx  EventBus.h.941F371C015376E6.idx  Game.cpp.45AE32F3186A9177.idx  Game.h.6A563C47CD3218E1.idx  KeyPressedEvent.h.9D46FB7E950CCF0E.idx  KeyboardControlledComponent.h.531C345FCA3E8BC7.idx  KeyboardMovementSystem.h.71661F2F786BFB97.idx  Logger.cpp.60E616C04B069E46.idx  Logger.h.D8B68F0D8E9B8163.idx  Main.cpp.5ACB159C52DB286A.idx  MovementSystem.h.7C42A63C65AA9260.idx  RenderDebug.h.EADB0A475483B5DE.idx  (+135 more)
assets/scripts/: Level1.lua
libs/imgui/: imgui_impl_sdl2.cpp  imgui_impl_sdl2.h
libs/sol/: sol.hpp
src/AssetManager/: AssetManager.cpp  AssetManager.h
src/Components/: AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  HealthComponent.h  KeyboardControlledComponent.h  ProjectileComponent.h  ProjectileEmitterComponent.h  RigidBodyComponent.h  ScriptComponent.h  SpriteComponent.h  TextLabelComponent.h  TransformComponent.h
src/ECS/: ECS.cpp  ECS.h
src/EventBus/: EventBus.h
src/Events/: CollisionEvent.h  KeyPressedEvent.h
src/Game/: Game.cpp  Game.h  LevelLoader.cpp  LevelLoader.h
src/Logger/: Logger.cpp  Logger.h
src/Systems/: AnimationSystem.h  CameraMovementSystem.h  CollisionSystem.h  DamageSystem.h  KeyboardMovementSystem.h  MovementSystem.h  ProjectileEmitSystem.h  ProjectileLifeCycleSystem.h  RenderDebug.h  RenderGUISystem.h  RenderHealthBarSystem.h  RenderSystem.h  RenderTextSystem.h  ScriptSystem.h
